# This file documents the revision history for Perl extension Catalyst.

 Bug fixes:
  - Fix the --mech and --mechanize options to the myapp_create.pl script
    to operate correctly by fixing the options passed down into the script.

 Documentation:
  - Fix missing - in the docs when describing the --mechanize option at one
    point.

5.80024 2010-05-15 11:55:44

  Bug fixes:
   - Revert the path resolution behaviour to how it used to work before
     Catalyst 5.80014_02, so that application paths are (by default)
     resolved from $ENV{PATH_INFO} and $ENV{SCRIPT_NAME}. This fixes backward
     compatibility breakage seen by a number of people since that release
     with mod_rewrite and SSI.

  New features:
   - Add a use_request_uri_for_path config setting to optionally
     use the (more correct) $ENV{REQUEST_URI} path resolution behaviour.

  Documentation:
   - Clarify the documentation for the Catalyst::Stats interface.
   - Copious documentation about the use_request_uri_for_path feature
     and the implications of setting this to true/false in
     Catalyst::Engine::CGI

5.80023 2010-05-07 23:50:27

  Bug fixes:
   - Ensure to always cleanup temporary uploaded files in all cases, even
     when exceptions occur during request processing, using HTTP::Body's
     ->cleanup feature. (RT#41442)
   - Ensure that Catalyst::Engine::HTTP's options hash is defined before
     dereferencing it. (RT#49267)
   - Fix regex special characters in REDIRECT_URL variable breaking
     the request base. (2nd part of RT#24951)
   - Fix not stripping backslashes in DispatchType::Regex::uri_for_action

  New features:
   - Setting __PACKAGE__->config(enable_catalyst_header => 1); in your MyApp.pm
     now enables the X-Catalyst header being printed when not in debug mode.
   - Require CGI::Simple::Cookie version 1.109 to ensure support for the
     HttpOnly flag
   - Allow the myapp_test.pl script to be given a list of paths which it
     will retrieve all of. (RT#53653)